testing on board

--- a/reg_maps/ECON_I2C_params_test.yaml
+++ b/reg_maps/ECON_I2C_params_test.yaml
@@ -1,36 +1,53 @@
 ECON-T:
  RW:
   # Turn on automatic alignment for all links  
-  #CH_ALIGNER_*_ALL:
-  # registers:
-  #  config: 1
+  CH_ALIGNER_*INPUT_ALL:
+   registers:
+    config:
+     value: 1
 
   FMTBUF_ALL:
    registers:
     tx_sync_word:
      value: 0b00100100010
+    buff_t1:
+     # Output buffer threshold T1 
+     # This must be at least 52 for the econ-t emulator to work
+     value: 52
     config:
      params:
-      # Number of output ports enabled (bits 7:4) 
       eporttx_numen:
+       # Number of output ports enabled
        param_value: 13
       use_sum:
        param_value: 0
       stc_type:
        param_value: 0
-  
+
+  MFC_ALGORITHM_SEL_DENSITY:
+   registers:
+    algo:
+     params:
+      select:
+       # 0: threshold sum, 1: Super Trigger Cell, 2: Best Choice (disabled), 3: repeater, 4: Autoencoder (Disabled)   
+       param_value: 0
+      density:
+       # 1: high density
+       param_value: 1
+
   ALIGNER_ALL:
    registers:
     config:
+     # Enable snapshot_arm [bit 0], and snapshot_en [bit 1] but do not enable i2c_snapshot_en [bit 2] nor dbg_fc_cnt_clr [bit 3]
      snapshot_en:
       param_value: 1
      snapshot_arm:
       param_value: 1
-    # Set the mask for the word aligner  
     match_mask_val:
+     # mask for the word aligner
      value: 0x0000000000000000
-    # Set the maximum bunch counter value to 3563, the number of bunch crossings in one orbit (minus one)
     orbsyn_cnt_max_val:
+     # maximum bunch counter value to 3563, the number of bunch crossings in one orbit (minus one)
      value: 3563
     # Set the bunch counter value on an orbit sync fast command to 0. Needs to be 1 to test STC    
     orbsyn_cnt_load_val:
