first pass at align links

--- a/econt_sw/zmq_i2c/configs/read_align.yaml
+++ b/econt_sw/zmq_i2c/configs/read_align.yaml
@@ -2,6 +2,9 @@ ECON-T:
  RO:
   CH_ALIGNER_*INPUT_ALL:
    registers:
-    - status
-    - select
-    - snapshot
+     status:
+      value: 0
+     select: 
+      value: 0
+     snapshot: 
+      value: 0
