--- a/econt_sw/configs/init.yaml
+++ b/econt_sw/configs/init.yaml
@@ -1,44 +1,50 @@
+daq:
+ input_file: /home/HGCAL_dev/src/econt_sw/econt_sw/data/EPORTRX_data_wafer.csv
+ elinks_out:
+  - { name : 'link0', polarity: 1, idcode: 0 }
+  - { name : 'link1', polarity: 1, idcode: 1 }
+  - { name : 'link2', polarity: 1, idcode: 2 }
+  - { name : 'link3', polarity: 1, idcode: 3 }
+  - { name : 'link4', polarity: 1, idcode: 4 }
+  - { name : 'link5', polarity: 1, idcode: 5 }
+  - { name : 'link6', polarity: 1, idcode: 6 }
+  - { name : 'link7', polarity: 1, idcode: 7 }
+  - { name : 'link8', polarity: 1, idcode: 8 }
+  - { name : 'link9', polarity: 1, idcode: 9 }
+  - { name : 'link10', polarity: 1, idcode: 10 }
+  - { name : 'link11', polarity: 1, idcode: 11 }
+  - { name : 'link12', polarity: 1, idcode: 12 }
+ zmq_push_port: '8888'
+ delay_scan_port: '8888'
+global:
+ data_push_port: '8888'
+ serverIP: localhost
+ output_directory: data
 ECON-T:
  RW:
   # Turn on automatic alignment for all links  
   CH_ALIGNER_*INPUT_ALL:
    registers:
     config:
+     per_ch_align_en:
+      param_value: 1
+     #patt_sel: 
+     # param_value: 1
+     #prbs28_en:
+     # param_value: 1
+     #patt_en:
+     # param_value: 1
+     #prbs_chk_en:
+     # param_value: 1
+    seed_in:
      value: 1
-
-  FMTBUF_ALL:
-   registers:
-    tx_sync_word:
-     value: 0b00100100010
-    buff_t1:
-     # Output buffer threshold T1 
-     # This must be at least 52 for the econ-t emulator to work
-     value: 52
-    config:
-     params:
-      eporttx_numen:
-       # Number of output ports enabled
-       param_value: 13
-      use_sum:
-       param_value: 0
-      stc_type:
-       param_value: 0
-
-  MFC_ALGORITHM_SEL_DENSITY:
-   registers:
-    algo:
-     params:
-      select:
-       # 0: threshold sum, 1: Super Trigger Cell, 2: Best Choice (disabled), 3: repeater, 4: Autoencoder (Disabled)   
-       param_value: 3
-      density:
-       # 1: high density
-       param_value: 1
-
+     
   ALIGNER_ALL:
    registers:
     config:
      # Enable snapshot_arm [bit 0], and snapshot_en [bit 1] but do not enable i2c_snapshot_en [bit 2] nor dbg_fc_cnt_clr [bit 3]
+     #i2c_snapshot_en:
+     # param_value: 1
      snapshot_en:
       param_value: 1
      snapshot_arm:
@@ -54,9 +60,79 @@ ECON-T:
     orbsyn_cnt_max_val:
      # maximum bunch counter value to 3563, the number of bunch crossings in one orbit (minus one)
      value: 3563
-    # Set the bunch counter value on an orbit sync fast command to 0. Needs to be 1 to test STC    
+    # Set the bunch counter value on an orbit sync fast command to 0. Needs to be 1 to test STC
     orbsyn_cnt_load_val:
      value: 1
     # Set the bunch counter value on which to take a snapshot to 4.  This needs to be set so that the special BX0 sync pattern from the HGCROC will appear inside the snapshot.
     orbsyn_cnt_snapshot:
      value: 4
+
+  FMTBUF_ALL:
+   registers:
+    tx_sync_word:
+     value: 0b00100100010
+    # default for 3 in software (78,54,25)
+    # default for 2 in software (52,28,25)
+    buff_t1:
+     # Output buffer threshold T1 
+     # This must be at least 52 for the econ-t emulator to work
+     value: 338 # default for eRx = 13
+    buff_t2:
+     value: 314 # default for eRx = 13
+    buff_t3:  
+     value: 25 # default for eRx = 13
+    config:
+     params:
+      eporttx_numen:
+       # Number of output ports enabled
+       param_value: 13
+      use_sum:
+       param_value: 0
+      stc_type:
+       param_value: 0
+
+  MFC_MUX_SELECT:
+   registers:
+    mux_select_*:
+     value: [ 7,  4,   5,  6,  3,  1,  0,  2,
+              8,  9,  10, 11, 14, 13, 12, 15,
+              23, 20, 21, 22, 19, 17, 16, 18,
+              25, 24, 26, 27, 30, 31, 28, 29,
+              38, 37, 39, 46, 36, 34, 33, 35,
+              40, 32, 41, 42, 47, 45, 43, 44]
+
+  MFC_CAL_VAL:
+   registers:
+    cal_*:
+     value: [348, 347, 335, 336, 347, 348, 335, 335,
+             323, 323, 311, 311, 325, 324, 312, 314, 
+             307, 293, 304, 318, 280, 267, 279, 291,
+             303, 290, 302, 315, 329, 316, 328, 340,
+             263, 276, 274, 261, 289, 302, 300, 287,
+             286, 299, 298, 286, 261, 274, 274, 262]             
+
+  MFC_ALGORITHM_SEL_DENSITY:
+   registers:
+    algo:
+     params:
+      select:
+       # 0: threshold sum, 1: Super Trigger Cell, 2: Best Choice (disabled), 3: repeater, 4: Autoencoder (Disabled)   
+       param_value: 0
+      density:
+       # 1: high density
+       param_value: 1
+
+  ALGO_THRESHOLD_VAL:
+   registers:
+    threshold_val_*:
+     value: [47, 47, 47, 47, 47, 47, 47, 47,
+             47, 47, 47, 47, 47, 47, 47, 47,
+             47, 47, 47, 47, 47, 47, 47, 47,
+             47, 47, 47, 47, 47, 47, 47, 47,
+             47, 47, 47, 47, 47, 47, 47, 47,
+             47, 47, 47, 47, 47, 47, 47, 47]
+
+  ALGO_DROPLSB:
+   registers:
+    drop_lsb:
+     value: 3
